@@ -5253,7 +5253,7 @@
 	* gnus-util.el (gnus-prin1-to-string): Bind print-length and
 	print-level.
 
-	* gnus-art.el (article-display-x-face): Removed grey x-face stuff.
+	* gnus-art.el (article-display-x-face): Removed gray x-face stuff.
 	(gnus-treat-display-grey-xface): Removed.
 
 	* gnus-fun.el (gnus-grab-cam-face): New.
@@ -10006,7 +10006,7 @@
 2002-02-08  ShengHuo ZHU  <zsh@cs.rochester.edu>
 
 	* gnus-art.el (gnus-treat-display-grey-xface): New variable.
-	(article-display-x-face): Use it.  Disable grey xface, if
+	(article-display-x-face): Use it.  Disable gray xface, if
 	uncompface is not found.
 
 	* message.el (message-mode): Don't enable multibyte on an indirect
@@ -11541,7 +11541,7 @@
 	* gnus-fun.el (gnus-convert-gray-x-face-to-xpm): Renamed.
 
 	* gnus-art.el (gnus-ignored-headers): Hide all X-Faces.
-	(article-display-x-face): Display grey X-Faces.
+	(article-display-x-face): Display gray X-Faces.
 
 	* gnus-fun.el (gnus-convert-gray-x-face-region): New function.
 	(gnus-convert-gray-x-face-to-ppm): Ditto.
