@@ -1,3 +1,7 @@
+2011-11-27  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* gnus.texi (Red Gnus): Spelling fix.
+
 2011-11-25  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* gnus.texi (The swish++ Engine, The swish-e Engine):
